k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gke
  namespace: dev
  labels:
    app: hello-gke
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: hello-gke
